support relative paths in request